# leonardo-admin-dashboard

./: .coveragerc  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.rst  setup.cfg
docs/source/: conf.py  index.rst
leonardo_admin_dashboard/: __init__.py  dashboard.py  menu.py  modules.py  settings.py  urls.py
leonardo_admin_dashboard/dashboard_modules/: dummy.py  google_analytics.py  lists.py
leonardo_admin_dashboard/locale/cs/LC_MESSAGES/: django.po
leonardo_admin_dashboard/locale/en/LC_MESSAGES/: django.po
leonardo_admin_dashboard/static/feincms/: item_editor.css  item_editor.js  tree_editor.css
leonardo_admin_dashboard/templates/admin/: base.html  change_form.html  login.html  sidebar_menu.html
leonardo_admin_dashboard/templates/admin/constance/: change_list.html
leonardo_admin_dashboard/templates/admin/feincms/: content_editor_with_go.html  fieldset.html  item_editor.html
leonardo_admin_dashboard/templates/dashboard/: base.html  layout.html
leonardo_admin_dashboard/templates/dashboard/modules/: _menu_model_list.html  _submenu_app_list.html  _submenu_link_list.html  dummy_visitors.html  dummy_visitors_chart.html  dummy_visitors_charts.html  dummy_visitors_count.html  menu_app_list.html  menu_link_list.html  menu_model_list.html  submenu_link_list.html
leonardo_admin_dashboard/templatetags/: menu.py
requirements/: default.txt
tests/: local_settings.py
