[metadata]
name = leonardo-admin-dashboard
summary = Simple Django Admin replacement for Leonardo CMS, built on django-admin-tools and django-jet.
description-file =
    README.rst
author = Michael Kuty
author-email = 
home-page = https://github.com/leonardo-modules/leonardo-admin-dashboard
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    leonardo_admin_dashboard
